# Imperecta

./: .gitignore  file-manager.tsx  index.html  next.config.mjs  package-lock.json  package.json  structure.txt  tailwind.config.ts  types.ts
app/: layout.tsx  page.tsx
app/api/documents/: route.ts
app/departments/: page.tsx
app/departments/[slug]/: page.tsx
backend/: Cargo.toml
backend/src/: main.rs  models.rs
backend/src/routes/: departments.rs  files.rs  finance.rs  hr.rs  it.rs  mod.rs  operations.rs  sales_marketing.rs
components/: FileExplorer.tsx  NavigationOverlay.tsx  NavigationWrapper.tsx  Sidebar.tsx  mode-toggle.tsx
data/: departments.ts
frontend/data/: departments.ts
frontend/pages/: index.tsx
pages/department/: [id].tsx
